Not compiled - Initial files for epiphany cpu score

--- a/cpukit/score/cpu/epiphany/Makefile.am
+++ b/cpukit/score/cpu/epiphany/Makefile.am
@@ -21,6 +21,8 @@ noinst_LIBRARIES = libscorecpu.a
 
 libscorecpu_a_SOURCES =
 libscorecpu_a_SOURCES += cpu.c
+libscorecpu_a_SOURCES += epiphany-context-switch.S
+libscorecpu_a_SOURCES += epiphany-context-initialize.c
 
 libscorecpu_a_CPPFLAGS = $(AM_CPPFLAGS)
 
