--- a/c/src/lib/libbsp/epiphany/parallella/Makefile.am
+++ b/c/src/lib/libbsp/epiphany/parallella/Makefile.am
@@ -19,19 +19,26 @@ dist_project_lib_DATA = bsp_specs
 include_HEADERS = include/bsp.h
 include_HEADERS += include/tm27.h
 
-nodist_include_HEADERS = ../../shared/include/coverhd.h \
-  include/bspopts.h
+nodist_include_bsp_HEADERS = ../../shared/include/bootcard.h
 include_bsp_HEADERS = ../shared/include/linker-symbols.h
+
+include_bsp_HEADERS += ../../../libbsp/shared/include/mm.h
+include_bsp_HEADERS += ../../shared/include/utility.h
+include_bsp_HEADERS += ../../shared/include/irq-generic.h
+include_bsp_HEADERS += ../../shared/include/irq-info.h
+include_bsp_HEADERS += ../../shared/include/stackalloc.h
+include_bsp_HEADERS += ../../shared/include/console-polled.h
+
+nodist_include_HEADERS = include/bspopts.h
 
 ###############################################################################
 #                  Data                                                       #
 ###############################################################################
-
 noinst_LIBRARIES = libbspstart.a
 
 libbspstart_a_SOURCES = start/start.S
 
-project_lib_DATA = start.$(OBJEXT)
+project_lib_DATA = start/start.$(OBJEXT)
 
 project_lib_DATA += startup/linkcmds
 
@@ -39,18 +46,34 @@ project_lib_DATA += startup/linkcmds
 #                  LibBSP                                                     #
 ###############################################################################
 
-#noinst_LIBRARIES += libbsp.a
+noinst_LIBRARIES += libbsp.a
 
 # Startup
-# #libbsp_a_SOURCES += startup/bspreset.c
-# #libbsp_a_SOURCES += startup/bspstart.c
-#
+libbsp_a_SOURCES = ../../shared/bspreset.c
+libbsp_a_SOURCES += ../../shared/bspstart.c
+
+# Shared
+libbsp_a_SOURCES += ../../shared/bootcard.c
+libbsp_a_SOURCES += ../../shared/bspclean.c
+libbsp_a_SOURCES += ../../shared/bspgetworkarea.c
+libbsp_a_SOURCES += ../../shared/bsplibc.c
+libbsp_a_SOURCES += ../../shared/bsppost.c
+libbsp_a_SOURCES += ../../shared/bsppredriverhook.c
+libbsp_a_SOURCES += ../../shared/bsppretaskinghook.c
+libbsp_a_SOURCES += ../../shared/gnatinstallhandler.c
+libbsp_a_SOURCES += ../../shared/sbrk.c
+libbsp_a_SOURCES += ../../shared/src/stackalloc.c
+
+# console
+libbsp_a_SOURCES += ../../shared/console-polled.c
+# debugio
+libbsp_a_SOURCES += console/console-io.c
 # ###############################################################################
 # #                  Special Rules
 # #
 # ###############################################################################
 #
-# DISTCLEANFILES = include/bspopts.h
+DISTCLEANFILES = include/bspopts.h
 #
 include $(srcdir)/preinstall.am
 include $(top_srcdir)/../../../../automake/local.am
