Add clock driver. It's not working properly yet. I had to re-write assembly code for initializing the driver because gcc emits the wrong function parameters order instead of the e-lib assembly code expects

--- a/c/src/lib/libbsp/epiphany/parallella/Makefile.am
+++ b/c/src/lib/libbsp/epiphany/parallella/Makefile.am
@@ -65,7 +65,7 @@ libbsp_a_SOURCES += ../../shared/sbrk.c
 libbsp_a_SOURCES += ../../shared/src/stackalloc.c
 
 # clock
-libbsp_a_SOURCES += ../../shared/clock_driver_simidle.c
+libbsp_a_SOURCES += clock/clockdrv.c ../../../shared/clockdrv_shell.h
 
 # console
 libbsp_a_SOURCES += ../../shared/console-polled.c
