Implement ISR_Handler, it's entered as expected, still there are some usual issues with ticker

--- a/cpukit/score/cpu/epiphany/Makefile.am
+++ b/cpukit/score/cpu/epiphany/Makefile.am
@@ -37,6 +37,7 @@ libscorecpu_a_SOURCES =
 libscorecpu_a_SOURCES += cpu.c
 libscorecpu_a_SOURCES += epiphany-context-switch.S
 libscorecpu_a_SOURCES += epiphany-context-initialize.c
+libscorecpu_a_SOURCES += epiphany-exception-handler.S
 
 #e-lib library 
 libscorecpu_a_SOURCES += e-lib/src/e_coreid_config.c
