Add stubs for SMP functions

--- a/cpukit/score/cpu/epiphany/Makefile.am
+++ b/cpukit/score/cpu/epiphany/Makefile.am
@@ -38,6 +38,7 @@ libscorecpu_a_SOURCES += cpu.c
 libscorecpu_a_SOURCES += epiphany-context-switch.S
 libscorecpu_a_SOURCES += epiphany-context-initialize.c
 libscorecpu_a_SOURCES += epiphany-exception-handler.S
+libscorecpu_a_SOURCES += epiphany-smp.c
 
 #e-lib library 
 libscorecpu_a_SOURCES += e-lib/src/e_coreid_config.c
