Add some utility functions and mapping between Epiphany core IDs and RTEMS linear processor IDs. Working fine and tested over GDB.
Begin with just two CPUs. Note, I have to add "_" because GCC always
add it to C symbols.

--- a/cpukit/score/cpu/epiphany/Makefile.am
+++ b/cpukit/score/cpu/epiphany/Makefile.am
@@ -14,6 +14,7 @@ include_rtems_score_HEADERS += rtems/score/cpu.h
 include_rtems_score_HEADERS += rtems/score/cpu_asm.h
 include_rtems_score_HEADERS += rtems/score/types.h
 include_rtems_score_HEADERS += rtems/score/epiphany.h
+include_rtems_score_HEADERS += rtems/score/epiphany-utility.h
 
 #e-lib library 
 include_rtems_score_HEADERS += e-lib/include/e_common.h 
