--- a/cpukit/score/cpu/epiphany/Makefile.am
+++ b/cpukit/score/cpu/epiphany/Makefile.am
@@ -15,6 +15,7 @@ include_rtems_score_HEADERS += rtems/score/cpu_asm.h
 include_rtems_score_HEADERS += rtems/score/types.h
 include_rtems_score_HEADERS += rtems/score/epiphany.h
 include_rtems_score_HEADERS += rtems/score/epiphany-utility.h
+include_rtems_score_HEADERS += rtems/score/cpuatomic.h
 
 #e-lib library 
 include_rtems_score_HEADERS += e-lib/include/e_common.h 
