--- a/cpukit/score/cpu/epiphany/preinstall.am
+++ b/cpukit/score/cpu/epiphany/preinstall.am
@@ -47,6 +47,10 @@ $(PROJECT_INCLUDE)/rtems/score/epiphany-utility.h: rtems/score/epiphany-utility.
 	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/rtems/score/epiphany-utility.h
 PREINSTALL_FILES += $(PROJECT_INCLUDE)/rtems/score/epiphany-utility.h
 
+$(PROJECT_INCLUDE)/rtems/score/cpuatomic.h: rtems/score/cpuatomic.h $(PROJECT_INCLUDE)/rtems/score/$(dirstamp)
+	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/rtems/score/cpuatomic.h
+PREINSTALL_FILES += $(PROJECT_INCLUDE)/rtems/score/cpuatomic.h
+
 $(PROJECT_INCLUDE)/rtems/score/e_common.h: e-lib/include/e_common.h $(PROJECT_INCLUDE)/rtems/score/$(dirstamp)
 	$(INSTALL_DATA) $< $(PROJECT_INCLUDE)/rtems/score/e_common.h
 PREINSTALL_FILES += $(PROJECT_INCLUDE)/rtems/score/e_common.h
