Add dummy test-and-set atomic operation to make other parts of RTEMS happy, it follows sparc's one

--- a/cpukit/score/cpu/epiphany/Makefile.am
+++ b/cpukit/score/cpu/epiphany/Makefile.am
@@ -41,6 +41,7 @@ libscorecpu_a_SOURCES += epiphany-context-switch.S
 libscorecpu_a_SOURCES += epiphany-context-initialize.c
 libscorecpu_a_SOURCES += epiphany-exception-handler.S
 libscorecpu_a_SOURCES += epiphany-smp.c
+libscorecpu_a_SOURCES += epiphany-atomic.c
 
 #e-lib library 
 libscorecpu_a_SOURCES += e-lib/src/e_coreid_config.c
