--- a/cpukit/sapi/Makefile.am
+++ b/cpukit/sapi/Makefile.am
@@ -26,16 +26,25 @@ EXTRA_DIST = include/rtems/README
 
 noinst_LIBRARIES = libsapi.a
 project_lib_LIBRARIES = libsapi.a
-libsapi_a_SOURCES = src/debug.c src/extension.c src/extensioncreate.c \
-    src/extensiondelete.c src/extensionident.c src/fatal.c src/exinit.c \
-    src/exshutdown.c src/io.c src/ioclose.c src/iocontrol.c src/iodata.c \
-    src/ioinitialize.c src/ioopen.c src/ioread.c src/ioregisterdriver.c \
-    src/iounregisterdriver.c src/iowrite.c \
-    src/rtemsapi.c src/extensiondata.c src/getversionstring.c \
+
+libsapi_a_SOURCES = src/fatal.c src/exinit.c\
+    src/rtemsapi.c \
     src/chainappendnotify.c src/chaingetnotify.c src/chaingetwait.c \
     src/chainprependnotify.c src/rbheap.c src/interrtext.c \
-    src/fatal2.c src/fatalsrctext.c
-libsapi_a_SOURCES += src/chainsmp.c
+    src/fatalsrctext.c \
+    src/exshutdown.c 
+    
+#libsapi_a_SOURCES = src/debug.c src/extension.c src/extensioncreate.c 
+#    src/extensiondelete.c src/extensionident.c src/fatal.c src/exinit.c \
+#    src/rtemsapi.c src/extensiondata.c src/getversionstring.c \
+#    src/chainappendnotify.c src/chaingetnotify.c src/chaingetwait.c \
+#    src/chainprependnotify.c src/rbheap.c src/interrtext.c \
+#    src/fatal2.c src/fatalsrctext.c \
+#    src/exshutdown.c src/io.c src/ioclose.c src/iocontrol.c src/iodata.c \
+#    src/ioinitialize.c src/ioopen.c src/ioread.c src/ioregisterdriver.c \
+#    src/iounregisterdriver.c src/iowrite.c 
+
+libsapi_a_SOURCES += #src/chainsmp.c
 libsapi_a_SOURCES += src/cpucounterconverter.c
 libsapi_a_SOURCES += src/delayticks.c
 libsapi_a_SOURCES += src/delaynano.c
